--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
     "@nextcloud/eslint-config": "^8.4.1",
     "@nextcloud/stylelint-config": "^3.0.1",
     "@nextcloud/webpack-vue-config": "^6.0.1"
+  },
+  "overrides": {
+    "@nextcloud/webpack-vue-config": {
+      "webpack-dev-server": "^5.0.2",
+      "vue-loader": "17.4.2"
+    }
   }
 }
